--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "remotion render src/index.tsx HelloWorld out/video.mp4",
     "upgrade": "remotion upgrade",
     "server": "ts-node server.tsx",
-    "test": "eslint src --ext ts,tsx,js,jsx && tsc"
+    "test": "eslint src --ext ts,tsx,js,jsx && tsc",
+    "atomic-css": "atomizer -r atomizer.rules.js -c 'atomizer.config.js' -o 'src/styles/scss/atomic.style.scss' -w './src/**/*.tsx'"
   },
   "repository": {},
   "license": "UNLICENSED",
@@ -16,11 +17,13 @@
     "@remotion/cli": "^2.3.2",
     "@remotion/eslint-config": "^2.3.2",
     "@remotion/renderer": "^2.3.2",
+    "clsx": "^1.1.1",
     "eslint": "^7.15.0",
     "express": "^4.17.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.6.1",
     "remotion": "^2.3.2",
     "ts-node": "^9.1.1",
     "typescript": "4.4.2"
@@ -28,6 +31,9 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/react": "^17.0.0",
-    "@types/web": "^0.0.46"
+    "@types/web": "^0.0.46",
+    "atomizer": "^3.13.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0"
   }
 }
